crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__function__nested_call_with_arguments.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/nested_call_with_arguments.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun returnArg (global @3) [(local arg @0)] []
      (block
         (return (local arg @0))))
   (fun returnFunCallWithArg (global @4) [(local func @0) (local arg @1)] []
      (block
         (return (call +2 (call +2 (global returnArg @3) (local func @0)) (local arg @1)))))
   (fun printArg (global @5) [(local arg @0)] []
      (block
         (print (local arg @0))))
   (expr (call +6 (global returnFunCallWithArg @4) (global printArg @5) "hello world")))

----- stderr -----
