crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__function__recursion.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/recursion.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun fib (global @1) [(local n @0)] []
      (block
         (if
            (< (local n @0) 2.0)
            (return (local n @0))
            ∅)
         (return (+ (call +1 (global fib @1) (- (local n @0) 1.0)) (call +1 (global fib @1) (- (local n @0) 2.0))))))
   (print (call +2 (global fib @1) 8.0)))

----- stderr -----
